Alteração no Opacity do h1 em Styles.css e alteração no P em index.html

--- a/Styles.css
+++ b/Styles.css
@@ -64,7 +64,7 @@ h1 {
     font-size: 62px;
     font-weight: 700;
     line-height: 82px;
-    letter-spacing: 0.6px;
+    letter-spacing: .6px;
     color: #161A49;
     width: 582px;
 }
